# live-origin

./: .gitignore  .gitmodules  README.md  write_index_to_c.py
service/: CMakeLists.txt  CMakeLists.txt.backup  capture.c  capture.h  context.c  context.h  geojson.h  ip_converter.c  ip_converter.h  main.c  ws_manager.c  ws_manager.h
service/ws/: handshake.c  ws.c
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/page/: Countries.tsx
